--- a/ud2/calculadora/style.css
+++ b/ud2/calculadora/style.css
@@ -13,12 +13,12 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    background-color: #2c2c2c; /* Fondo oscuro para toda la página */
+    background-color: #2c2c2c;
 }
 
 .container {
-    width: 100vw; /* La calculadora ocupa todo el ancho de la pantalla */
-    height: 100vh; /* La calculadora ocupa todo el alto de la pantalla */
+    width: 100vw; 
+    height: 100vh;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
@@ -28,13 +28,13 @@ body {
 }
 
 .item {
-    background: #444; /* Fondo oscuro para los botones */
-    color: #fff; /* Texto blanco para contraste */
+    background: #444; 
+    color: #fff; 
     text-align: center;
     padding: 20px;
     cursor: pointer;
     font-size: 2.5rem;
-    border: 1px solid #666; /* Borde gris oscuro */
+    border: 1px solid #666;
     border-radius: 10px;
     transition: background 0.3s ease;
     display: flex;
@@ -43,12 +43,12 @@ body {
 }
 
 .item:active {
-    background: #666; /* Un gris más claro cuando se hace clic */
+    background: #666; 
 }
 
 .item.display {
     grid-column: span 4;
-    background: #333; /* Fondo más oscuro para la pantalla */
+    background: #333;
     font-size: 3rem;
     text-align: right;
     padding: 20px;
@@ -56,16 +56,16 @@ body {
 
 .clear {
     grid-column: span 4;
-    background: #666; /* Fondo gris más claro para el botón "Clear" */
+    background: #666; 
     color: #fff;
 }
 
-/* Opciones de operaciones (suma, resta, multiplicación, división) */
+
 .item.operator {
-    background: #74bcec; /* Color azul para los operadores */
-    border: 1px solid #74bcec; /* Borde azul más oscuro */
+    background: #74bcec;
+    border: 1px solid #74bcec;
 }
 
 .item.operator:active {
-    background: #74bcec; /* Cambio a un azul más oscuro cuando se hace clic */
+    background: #74bcec; 
 }
