--- a/ud2/brujula_social/style.css
+++ b/ud2/brujula_social/style.css
@@ -1,9 +1,100 @@
 :root{
-    --main-c:#fdd72d;
+    --main-c:#7aad3e; 
     --border-r:.2rem;
   }
   
   /** Estilos Generales **/
+  
+  header {
+    position: fixed;
+    width: 100%;
+    height: 65px;
+    align-items: center;   
+    z-index: 1000; 
+  }
+  
+.logo img {
+  height: 100px; /* Ajusta la altura del logo */
+    display: block;
+    float: left;
+}
+
+  .navegacion{
+    background-color: #f1e0c6;
+            padding: 15px;
+            display: flex;
+            justify-content: space-between;
+            position: relative;
+            font-weight: bold;
+          
+  }
+
+  .navegacion ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+
+  .navegacion ul li a {
+    text-decoration:none; 
+    color: #6d4c41;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+
+.navegacion ul li a:hover {
+  color: #a67b5b;
+}
+  .menu > li{
+    position: relative;
+    display: inline-block;
+  }
+    
+  .menu > li > a{
+    display: block;
+    padding: 15px 20px;
+    color: #353535;
+    font-family: 'Open sans';
+    text-decoration: none;
+  }
+  
+  .menu li a:hover{
+    color: #CE7D35;
+    transition: all .3s;
+  }
+  
+  /* Submenu*/
+  
+  .submenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    border-radius: 15px;
+    background-color: #ffffff8a;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-10px); /* Inicia más arriba */
+    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+}
+  
+  .submenu > li > a {
+    display: block;
+    padding: 10px 20px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 16px;
+    white-space: nowrap;
+}
+  
+.menu > li:hover .submenu {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0); 
+}
   
   html *{
    margin: 0; 
@@ -56,7 +147,7 @@
   }
   
   .logo-header{
-    max-width: 35px;
+    max-width: 150px;
     height: 100%;
     width: 100%;
   }
@@ -69,7 +160,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgba(106, 141, 163, 0.7);
+    background-color: #b4cf8d;
     background-blend-mode: multiply;
     display: flex;
     align-items: center;
@@ -206,6 +297,9 @@
   }
   
   .footer-creds{
-    display: flex;
-    justify-content: center;
+    color: #674ea7;
+    font-family: Merriweather, Arial;
+    font-size: 9.0pt;
+    font-weight: 700;
+    vertical-align: baseline;
   }
