--- a/ud2/brujula_social/style.css
+++ b/ud2/brujula_social/style.css
@@ -286,7 +286,7 @@
 }
 
 .info-box {
-    background-color: #d4eeac; /* Color de fondo */
+    background-color: #f0f0f0; /* Color de fondo */
     border-radius: 15px; /* Bordes redondeados */
     padding: 20px;
     width: 300px; /* Ancho fijo */
