--- a/ud2/brujula_social/style_equipo.css
+++ b/ud2/brujula_social/style_equipo.css
@@ -3,19 +3,25 @@
   --border-r:.2rem;
 }
 
+body{
+  display: block;
+  margin: 0px;
+}
+
 /* Estilo de la sección del equipo */
 .equipo-container {
   padding-top: 100px; /* espacio para que no choque con el header */
-  background-color: #d4eeac;
+  background-color: 0px 6px 12px rgb(189, 215, 160);;
   text-align: center;
   color: var(--text-c);
-  margin-bottom: 100px; /* Espacio entre el equipo y el footer */
+  margin-bottom: 20px; /* Espacio entre el equipo y el footer */
 }
 
 .equipo-container h1 {
   font-size: 2.5rem;
   color: #6d4c41;
-  margin-bottom: 80px;
+  margin-bottom: 20px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .equipo-wrapper {
@@ -57,7 +63,7 @@
 }
 
 .miembro p {
-  color: var(--text-c);
+  color: var();
   font-size: 1rem;
 }
 
