--- a/ud2/brujula_social/style_historia.css
+++ b/ud2/brujula_social/style_historia.css
@@ -1,4 +1,7 @@
-
+body{
+  display: block;
+  margin: 0px;
+}
 
 /*---valores del texto---*/
 
@@ -15,7 +18,7 @@
 }
 
 .main-content-wrapper {
-  background-color: #f1e0c6;
+  background-color: #f2ffdfca;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 800px;
@@ -34,6 +37,11 @@
   font-size: 2.5rem;
   margin-bottom: 20px;
   color: #6d4c41;
+}
+
+h1{
+  color: #6d4c41;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .main-content-box p {
